--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,16 +10,18 @@
     </style>
 
     <style name="gender_select_icons">
-        <item name="android:layout_height">385dp</item>
-        <item name="android:layout_width">212dp</item>
+        <item name="android:layout_height">258dp</item>
+        <item name="android:layout_width">258dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
     <style name="gender_confirm_button">
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:typeface">monospace</item>
-        <item name="android:paddingVertical">15dp</item>
-        <item name="android:paddingHorizontal">86dp</item>
+        <item name="android:paddingVertical" tools:targetApi="o">15dp</item>
+        <item name="android:paddingHorizontal" tools:targetApi="o">86dp</item>
         <item name="android:fontFamily">@font/nunito_semibold</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
