Да это пиздец полный какже я затрахался, одна опечатка 30 мин поиска бомбит так, что Илон Маск может добраться на моем пердаке до марса за один doge. Короче сделал я все нормально теперь активити для регистрации надо допилить

--- a/app/src/main/res/drawable/gender_confirm_button_gradient.xml
+++ b/app/src/main/res/drawable/gender_confirm_button_gradient.xml
@@ -6,7 +6,7 @@
             <stroke android:width="0dp"/>
             <gradient
                 android:angle="45"
-                android:startColor="#ffffff"
+                android:startColor="#ebf5ee"
                 android:endColor="#B6FBFF"/>
         </shape>
     </item>
