--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,14 +47,14 @@
                     style="@style/input_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/editTextTextPassword"
+                    android:layout_above="@+id/editText_password"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:text="nickname" />
 
                 <EditText
-                    android:id="@+id/editTextTextLogin"
+                    android:id="@+id/editText_nickname"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_alignParentTop="true"
@@ -70,14 +70,14 @@
                     style="@style/input_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/editTextTextPassword"
+                    android:layout_above="@+id/editText_password"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:text="password" />
 
                 <EditText
-                    android:id="@+id/editTextTextPassword"
+                    android:id="@+id/editText_password"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_alignParentTop="true"
@@ -93,14 +93,14 @@
                     style="@style/input_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/editTextTextPassword"
+                    android:layout_above="@+id/editText_password"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:text="password again" />
 
                 <EditText
-                    android:id="@+id/editTextTextPasswordAgain"
+                    android:id="@+id/editText_password_again"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_alignParentTop="true"
@@ -111,12 +111,10 @@
                     android:inputType="textPassword" />
 
                 <Button
-                    android:id="@+id/button2"
-                    style="@style/gender_confirm_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/confirm_sign_up_button"
+                    style="@style/login_registrate_button"
                     android:layout_gravity="center"
-                    android:background="@drawable/select_gender_gradient_boy"
+                    android:background="@drawable/login_regirstrate_button_background_boy"
                     android:text="Confirm"
                     app:backgroundTint="#00FFFFFF"
                     app:backgroundTintMode="src_over" />
