--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -38,4 +38,9 @@
         <item name="android:textSize">17sp</item>
         <item name="fontFamily">@font/nunito_regular</item>
     </style>
+
+    <style name="login_registrate_button" parent="gender_confirm_button">
+        <item name="background">@drawable/login_regirstrate_button_background_boy</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
