--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,7 +62,7 @@
                     android:layout_alignParentRight="true"
                     android:ems="10"
                     android:layout_marginBottom="40dp"
-                    android:inputType="textPassword" />
+                    android:inputType="text" />
 
 
                 <TextView
