--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/sign_up_view"
     android:layout_width="match_parent"
     android:background="@drawable/select_gender_gradient_boy"
     android:layout_height="match_parent"
@@ -17,20 +16,19 @@
         <TextView
             android:id="@+id/textView2"
             style="@style/activity_heading"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="90dp"
             android:gravity="center"
-            android:text="Sign up"
+            android:text="Login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_weight="80"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
             android:background="@drawable/login_registrate_background"
             android:orientation="vertical"
             android:padding="50dp">
@@ -78,29 +76,6 @@
                 android:layout_alignParentRight="true"
                 android:ems="10"
                 android:layout_marginBottom="40dp"
-                android:inputType="textPassword" />
-
-
-            <TextView
-                android:id="@+id/textView5"
-                style="@style/input_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/editText_password"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:text="password again" />
-
-            <EditText
-                android:id="@+id/editText_password_again"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:ems="10"
-                android:layout_marginBottom="50dp"
                 android:inputType="textPassword" />
 
             <Button
