--- a/app/src/main/res/layout/activity_login_or_sign_up.xml
+++ b/app/src/main/res/layout/activity_login_or_sign_up.xml
@@ -2,62 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/select_gender_gradient_boy"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginOrSignUp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textView6"
+        style="@style/activity_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="124dp"
+        android:text="Logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/login_or_sign_up_login_button"
+        style="@style/login_registrate_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingHorizontal="50dp"
-        >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/gender_confirm_button_gradient"
+        android:text="Login"
+        android:textColor="@color/black"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="src_over"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:ignore="MissingConstraints" />
 
-
-        <TextView
-            android:id="@+id/textView6"
-            style="@style/activity_heading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Logo"
-            android:layout_marginBottom="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/login_or_sign_up_login_button"
-            style="@style/login_registrate_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/gender_confirm_button_gradient"
-            android:layout_marginBottom="30dp"
-            android:text="Login"
-            android:textColor="@color/black"
-            app:backgroundTint="#00FFFFFF"
-            app:backgroundTintMode="src_over"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="246dp" />
-
-        <Button
-            android:id="@+id/login_or_sign_up_sign_up_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign up"
-            android:layout_marginBottom="30dp"
-            style="@style/gender_confirm_button"
-            android:background="@drawable/login_registrate_button_background_girl"
-            android:textColor="@color/white"
-            app:backgroundTint="#00FFFFFF"
-            app:backgroundTintMode="src_over"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="372dp" />
-
-    </LinearLayout>
-
+    <Button
+        android:id="@+id/login_or_sign_up_sign_up_button"
+        style="@style/gender_confirm_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:background="@drawable/login_registrate_button_background_girl"
+        android:text="Sign up"
+        android:textColor="@color/white"
+        app:backgroundTint="#00FFFFFF"
+        app:backgroundTintMode="src_over"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_or_sign_up_login_button"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
