--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,14 +38,14 @@
                 style="@style/input_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/editText_password"
+                android:layout_above="@+id/login_password"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:text="nickname" />
 
             <EditText
-                android:id="@+id/editText_nickname"
+                android:id="@+id/login_login"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_alignParentTop="true"
@@ -61,14 +61,14 @@
                 style="@style/input_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/editText_password"
+                android:layout_above="@+id/login_password"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:text="password" />
 
             <EditText
-                android:id="@+id/editText_password"
+                android:id="@+id/login_password"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_alignParentTop="true"
@@ -79,7 +79,7 @@
                 android:inputType="textPassword" />
 
             <Button
-                android:id="@+id/confirm_sign_up_button"
+                android:id="@+id/login_confirm"
                 style="@style/login_registrate_button"
                 android:layout_gravity="center"
                 android:background="@drawable/login_regirstrate_button_background_boy"
