--- a/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
+++ b/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
@@ -4,7 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sign_up_fill_form_view"
     android:layout_width="match_parent"
+    android:background="@drawable/select_gender_gradient_boy"
     android:layout_height="match_parent"
     tools:context=".SignUpFrom">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/activity_heading"
+            android:text="Write a little about  \n yourself!" />
+
+
+        <LinearLayout
+            android:layout_weight="80"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:background="@drawable/login_registrate_background"
+            android:orientation="vertical"
+            android:padding="50dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                style="@style/input_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/login_password"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="nickname" />
+
+            <EditText
+                android:id="@+id/login_login"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:ems="10"
+                android:layout_marginBottom="40dp"
+                android:inputType="text" />
+
+
+            <TextView
+                android:id="@+id/textView4"
+                style="@style/input_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/login_password"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="password" />
+
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:ems="10"
+                android:layout_marginBottom="40dp"
+                android:inputType="textPassword" />
+
+            <Button
+                android:id="@+id/login_confirm"
+                style="@style/login_registrate_button"
+                android:layout_gravity="center"
+                android:background="@drawable/login_regirstrate_button_background_boy"
+                android:text="Confirm"
+                app:backgroundTint="#00FFFFFF"
+                app:backgroundTintMode="src_over" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
