--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/activity_heading"
             style="@style/activity_heading"
             android:text="Sign up"/>
 
