--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -57,6 +57,13 @@
         <item name="android:layout_marginBottom">40dp</item>
     </style>
 
+    <style name="radio">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginRight">30dp</item>
+    </style>
+
     <style name="login_registrate_button" parent="gender_confirm_button">
         <item name="android:background">@drawable/login_regirstrate_button_background_boy</item>
         <item name="android:textColor">@color/white</item>
