--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -69,4 +69,19 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_gravity">center</item>
     </style>
+
+    <style name="navigation_button">
+        <item name="android:layout_width">47dp</item>
+        <item name="android:layout_height">47dp</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:background">#00ffffff</item>
+    </style>
+
+    <style name="view_nomination_icon" parent="navigation_button">
+        <item name="android:layout_width">37dp</item>
+        <item name="android:layout_height">37dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+    </style>
+
+
 </resources>
